Small updates to BFF section

--- a/bff.Rmd
+++ b/bff.Rmd
@@ -122,7 +122,7 @@ $$\\[0.1cm]$$
 
 $$\\[0.1cm]$$
 
-What do you do with your wine boxes?
+What do you do with your wine boxes? I (of course) put them on bikes!
 
 $$\\[0.1cm]$$
 
@@ -262,7 +262,7 @@ $$\\[0.1cm]$$
 
 $$\\[0.1cm]$$
 
-One of those bikes you build for you cause you like the frame colors - but everyone else also likes so it gets away from you ...
+One of those bikes you build for yourself because you like the frame colors but everyone else also likes so it gets away from you ...
 
 $$\\[0.1cm]$$
 
@@ -360,7 +360,7 @@ $$\\[0.1cm]$$
 
 $$\\[0.1cm]$$
 
-All original 1980s De Rosa Professional with full Campagnolo Chorus groupset (including the pedals, straps, and water bottle). This one I bought it from the original owner in great shape, it was custom built for him by a certain Hugo (de Rosa). But guess what? We are the same height, so perfect fit for me! It cleaned up great for its' age, did it not?
+All original 1980s De Rosa Professional with a complete Campagnolo Chorus groupset (including the pedals, straps, and water bottle). This one I bought it from the original owner in great shape, it was custom built for him by a certain Hugo (de Rosa). But guess what? We are the same height, so perfect fit for me! It cleaned up great for its' age, did it not?
 
 $$\\[0.1cm]$$
 
@@ -374,7 +374,7 @@ $$\\[0.1cm]$$
 
 $$\\[0.1cm]$$
 
-Only the best neighbors get BFF bikes! This one was built for one of our coolest neighbors from a 1980s Vitus frame and more modern components to be the perfect hybrid commuter bike (and super light), capable bike to ride around town or go on longer rides!
+Only the best neighbors get BFF bikes! This one was built for one of our coolest neighbors from a 1980s Vitus frame and more modern components to be the perfect hybrid commuter bike (and super light), capable to ride around town or go on longer rides!
 
 $$\\[0.1cm]$$
 
@@ -388,7 +388,7 @@ $$\\[0.1cm]$$
 
 $$\\[0.1cm]$$
 
-I know I said I don't like gravel bikes and that they are stupid, but I take it all back! This is a 1995 custom made Atala frame built with period correct Campagnolo Chorus 9 speed groupset with a twist - a set of hand-built 650b rims (and long reach brakes). This allows me to fit 38 mm tires and have the prettiest gravel bike around - jealous?
+I know I said I don't like gravel bikes and that they are stupid, but I take it all back! This is a 1995 custom made Atala frame built with period correct Campagnolo Chorus 9 speed groupset and a twist - a set of hand-built 650b rims (and long reach brakes). This allows me to fit much bigger tires and have the prettiest gravel bike around - jealous?
 
 $$\\[0.1cm]$$
 
@@ -398,11 +398,11 @@ $$\\[0.1cm]$$
 
 $$\\[0.1cm]$$
 
-My father-in-law needed (at least I felt like he needed) a new bike to go around the block and get some groceries. So using everything I had around the house, I "patchworked" him a cool new ride! Would you get your groceries on this?
+# Patchwork
 
 $$\\[0.1cm]$$
 
-# Patchwork
+My father-in-law needed (at least I felt like he needed) a new bike to go around the block and get some groceries. So using everything I had around the house, I "patchworked" him a cool new ride! Would you get your groceries on this?
 
 $$\\[0.1cm]$$
 
