--- a/bff.Rmd
+++ b/bff.Rmd
@@ -122,7 +122,7 @@ $$\\[0.1cm]$$
 
 $$\\[0.1cm]$$
 
-What do you do with your wine boxes? I (of course) put them on bikes!
+What do you do with your wine boxes? I put them on the bikes I build!
 
 $$\\[0.1cm]$$
 
@@ -388,7 +388,7 @@ $$\\[0.1cm]$$
 
 $$\\[0.1cm]$$
 
-I know I said I don't like gravel bikes and that they are stupid, but I take it all back! This is a 1995 custom made Atala frame built with period correct Campagnolo Chorus 9 speed groupset and a twist - a set of hand-built 650b rims (and long reach brakes). This allows me to fit much bigger tires and have the prettiest gravel bike around - jealous?
+I know I said I don't like gravel bikes and that they are stupid, but I take it all back! This is my 1995 custom made Atala frame built with period correct Campagnolo Chorus 9 speed groupset and a twist - a set of hand-built 650b rims (and long reach brakes). This allows me to fit much bigger tires and have the prettiest gravel bike around - jealous?
 
 $$\\[0.1cm]$$
 
