--- a/docs/CV/Sposito_CV.Rmd
+++ b/docs/CV/Sposito_CV.Rmd
@@ -55,10 +55,12 @@ tribble(~ Title, ~ Published, ~ Journal, ~ When,
         "\\href{https://journals.sagepub.com/doi/10.1177/00323217241261229}{Radiating Truthiness: Authenticity performances in politics in Brazil and the United States}", "\\href{https://journals.sagepub.com/doi/10.1177/00323217241261229}{DOI: 10.1177/00323217241261229}", "Political Studies", "July 2024",
   "\\href{https://www.tandfonline.com/doi/full/10.1080/09644016.2023.2220639}{Which Amazon Problem? Problem-constructions and Transnationalism in Brazilian Presidential Discourse since 1985 (with Livio Silva-Muller)}",
   "\\href{https://www.tandfonline.com/doi/full/10.1080/09644016.2023.2220639}{DOI: 10.1080/09644016.2023.2220639}", "Environmental Politics", "June 2023",
-  "How urgently do leaders speak about climate change? Urgency analysis of political priorities (with Jael Tan and James Hollway)",
+  "Urgency Analysis: Ranking Political Priorities (with Jael Tan and James Hollway)",
   "Working Paper", "", "",
   "Managing imprecise dates in R with messydates (with James Hollway)",
-  "Working Paper", "", "") %>% 
+  "Working Paper", "", "",
+  "Is peace good for the environment? A comparative approach to post-conflict environmental outcomes (with Stefano Jud and Quynh Nguyen)",
+  "Working Paper", "", "",) %>% 
   detailed_entries(where = Journal, with = Title, what = Published, when = When,
                    .protect = FALSE)
 ```
