--- a/publications.Rmd
+++ b/publications.Rmd
@@ -39,12 +39,18 @@ $$\\[0.1cm]$$
 
 $$\\[0.1cm]$$
 
-**How urgently do politicians speak about climate change? Introducing urgency analysis (with Jael Tan and James Hollway)**
+**Urgency Analysis: Ranking Political Priorities (with Jael Tan and James Hollway)**
 
-When politicians mention climate change, how urgently is it framed? Urgency is an expression of how critical or immediate a response to a problem is and thus gets to the heart of political values and preferences, rhetoric, and negotiation. We introduce a new set of text analytic tools, urgency analysis (UA), to examine how and when the urgency of political discourse around climate change has shifted, and where there is less change than expected. UA is a novel addition to the bestiary of text analytic tools that includes word frequency analysis and sentiment analysis. UA rests upon a multidimensional, weighted, and survey-validated conception of how urgency can be expressed. UA combines Natural Language Processing and dictionary approaches to provide a contextualized, comparable, and scalable new method for the analysis of political texts. We use data on high-level political speeches on climate change to demonstrate what UA offers compared to word frequency and sentiment analysis, and investigate whether urgent terms are used more as time goes on — and the average temperature goes up — or reserved for and deployed more at critical junctures. UA is implemented for R with the [poldis](https://github.com/henriquesposito/poldis) package, making it an easy, free, and accessible tool for researchers interested in analyzing political discourses.
+How urgent is climate change for our leaders and where does it lie in their list of priorities? When speaking to their electorates and canvassing support, politicians employ various terms to signal the urgency of different problems and the priority of specific policies. We introduce a new text analytic tool, urgency analysis, to capture the urgency of political priorities in discourse. Urgency analysis combines natural language processing and survey validated dictionaries to provide an interpretable measure of the urgency of priorities in political texts. To demonstrate the usefulness of urgency analysis, we compare the urgency of climate change priorities by speaker and over time. Using data on US presidential and UK prime ministerial political speeches on climate change between 2009 and 2019, we find that climate change appears less urgent over time in political discourses, especially when compared employment, immigration, and health. We conclude by discussing extensions to urgency analysis and its potential applications. Urgency analysis is implemented for R with the [poldis](https://github.com/henriquesposito/poldis) package, making it an easy, free, and accessible tool for researchers interested in analyzing political discourses.
 
 $$\\[0.1cm]$$
 
 **Managing imprecise dates in R with messydates (with James Hollway)**
 
 Dates are often messy. Whether historical (or ancient), future, or even recent, we sometimes only know approximately when an event occurred, that it happened within a particular period, or sources offer multiple competing dates. Although researchers generally recognize this messiness, many feel expected to force artificial precision or unfortunate imprecision on temporal data to proceed with analysis. However, this can create inferential issues when timing or sequence is important. This paper introduces the [messydates](https://globalgov.github.io/messydates/) R package that assists researchers with this problem by retaining and working with various kinds of date imprecision.
+
+$$\\[0.1cm]$$
+
+**Is peace good for the environment? A comparative approach to post-conflict environmental outcomes (with Stefano Jud and Quynh Nguyen)**
+
+In the past decades, most conflicts took place in areas considered biodiversity hotspots. There is a growing literature that investigates the relationship between conflict and the environment; however, these studies typically remain at the country level and are rarely comparative. The aggregation of isolated case studies can be problematic since they rely on different definitions and operationalizations of conflicts, diverse measures of environmental degradation, and work  with different geopolitical levels. We propose investigating the relationship between conflict, peace, and the environment systematically by considering land-use change patterns in conflict  and post-conflict zones over time. We work with a high-resolution 30 by 30 square meters  global landcover time-series dataset and a georeferenced conflict events dataset to create similar sized peace and conflict areas for several countries that have experienced violent conflicts since the year 2000. These areas serve as treatment and control for inferential models that investigate how conflicts progress and end and their impact on land-use changes in their aftermath. 
