--- a/CV/Sposito_CV.Rmd
+++ b/CV/Sposito_CV.Rmd
@@ -56,7 +56,7 @@ tribble(~ Title, ~ Published, ~ Journal, ~ When,
   "\\href{https://www.tandfonline.com/doi/full/10.1080/09644016.2023.2220639}{Which Amazon Problem? Problem-constructions and Transnationalism in Brazilian Presidential Discourse since 1985 (with Livio Silva-Muller)}",
   "\\href{https://www.tandfonline.com/doi/full/10.1080/09644016.2023.2220639}{DOI: 10.1080/09644016.2023.2220639}", "Environmental Politics", "June 2023",
   "Urgency Analysis: Ranking Political Priorities (with Jael Tan and James Hollway)",
-  "Working Paper", "", "",
+  "Under review", "", "",
   "Managing imprecise dates in R with messydates (with James Hollway)",
   "Working Paper", "", "",
   "Is peace good for the environment? A comparative approach to post-conflict environmental outcomes (with Stefano Jud and Quynh Nguyen)",
@@ -91,18 +91,19 @@ tribble(~ What, ~ When, ~ With, ~ Where, ~ Why,
 # Teaching
 
 ```{r}
-tribble(~ Course, ~ Where, ~ Date, ~ Why, 
+tribble(~ Course, ~ Where, ~ Date, ~ Why,
+        "Intermediate R for Social Science Research",
+  "The Graduate Institute of International and Development Studies",
+  "Fall 2023",
+  "Provides an overview of various research methods using R
+  \\item Teaches students how to carry-on different types of statistical modeling; how to work with unsupervised text analysis approaches; and how to analyze and visualize survey data
+  \\item Encourages students to design their own research projects using R",
   "Fundamentals of R (co-lecturer)",
   "The Graduate Institute of International and Development Studies",
   "Fall 2022, Spring 2023, Fall 2023",
   "Provides a hands-on introduction to data science using the R programming language and software
   \\item Teaches students how to import, transform, analyze, and visualize various types of data in R
-  \\item Demonstrates practical applications of R for the analysis of environment, finance, and conflict data",
-  "Intermediate R for Social Science Research",
-  "The Graduate Institute of International and Development Studies",
-  "Fall 2023",
-  "Provides an applied introduction to various research methods using R
-  \\item Teaches students how to select and carry-on different types of statistical modeling; how to work with unsupervised approaches for text analysis; and how to analyze and visualize survey data") %>% 
+  \\item Demonstrates practical applications of R for the analysis of environment, finance, and conflict data") %>% 
   detailed_entries(what = Where, with = Course, where = Date, why = Why, .protect = FALSE)
 ```
 
@@ -174,7 +175,7 @@ tribble(~ Name, ~ Purpose, ~ Status,
         "\\href{https://manydata.ch/}{Portal for global governance data}",
         "Contributor",
         "\\href{https://globalgov.github.io/messydates/}{messydates}",
-        "\\href{https://globalgov.github.io/messydates/}{Extended Date/Time Format}",
+        "\\href{https://globalgov.github.io/messydates/}{Extended Date/Time Formats}",
         "Contributor",
         "\\href{https://stocnet.github.io/manynet/}{manynet}",
         "\\href{https://stocnet.github.io/manynet/}{Make, manipulate, and map myriad networks}",
@@ -184,12 +185,6 @@ tribble(~ Name, ~ Purpose, ~ Status,
         "Contributor",
         "\\href{https://globalgov.github.io/manypkgs/}{manypkgs}",
         "\\href{https://globalgov.github.io/manypkgs/}{Support the creation of new many packages}",
-        "Contributor",
-        "\\href{https://globalgov.github.io/manyenviron/}{manyenviron}",
-        "\\href{https://globalgov.github.io/manyenviron/}{Data on environmental agreements}",
-        "Contributor",
-        "\\href{https://globalgov.github.io/manystates/}{manystates}",
-        "\\href{https://globalgov.github.io/manystates/}{Data on sovereign states}",
         "Contributor") %>%
   detailed_entries(what = Purpose, with = Name, where = Status,
                    .protect = FALSE)
