--- a/publications.Rmd
+++ b/publications.Rmd
@@ -53,4 +53,10 @@ $$\\[0.1cm]$$
 
 **Is peace good for the environment? A comparative approach to post-conflict environmental outcomes (with Stefano Jud and Quynh Nguyen)**
 
-In the past decades, most conflicts took place in areas considered biodiversity hotspots. There is a growing literature that investigates the relationship between conflict and the environment; however, these studies typically remain at the country level and are rarely comparative. The aggregation of isolated case studies can be problematic since they rely on different definitions and operationalizations of conflicts, diverse measures of environmental degradation, and work  with different geopolitical levels. We propose investigating the relationship between conflict, peace, and the environment systematically by considering land-use change patterns in conflict  and post-conflict zones over time. We work with a high-resolution 30 by 30 square meters  global landcover time-series dataset and a georeferenced conflict events dataset to create similar sized peace and conflict areas for several countries that have experienced violent conflicts since the year 2000. These areas serve as treatment and control for inferential models that investigate how conflicts progress and end and their impact on land-use changes in their aftermath. 
+In the past decades, most conflicts took place in areas considered biodiversity hotspots. There is a growing literature that investigates the relationship between conflict and the environment; however, these studies typically remain at the country level and are rarely comparative. The aggregation of isolated case studies can be problematic since they rely on different definitions and operationalizations of conflicts, diverse measures of environmental degradation, and work  with different geopolitical levels. We propose investigating the relationship between conflict, peace, and the environment systematically by considering land-use change patterns in conflict  and post-conflict zones over time. We work with a high-resolution 30 by 30 square meters  global landcover time-series dataset and a georeferenced conflict events dataset to create similar sized peace and conflict areas for several countries that have experienced violent conflicts since the year 2000. These areas serve as treatment and control for inferential models that investigate how conflicts progress and end and their impact on land-use changes in their aftermath.
+
+$$\\[0.1cm]$$
+
+**Public Acceptance of Environmental Restrictions in Non-Democratic Regimes (with Stefano Jud and Quynh Nguyen)**
+
+As environmental crises intensify, governments may enact policies that restrict individual freedoms. This study asks when citizens are willing to accept such constraints, especially in non-democratic regimes. Drawing on survey experiments with 17,793 respondents across 12 countries, we find that effectiveness, low costs, and citizen participation drive public support, while threat-based justifications have limited impact. Even in authoritarian contexts, restrictive environmental policies are not accepted unconditionally. These findings challenge the notion that autocracies can easily impose green mandates and underscore the importance of legitimacy, fairness, and inclusiveness in environmental governance, regardless of regime type.
