--- a/CV/Sposito_CV.Rmd
+++ b/CV/Sposito_CV.Rmd
@@ -55,13 +55,17 @@ tribble(~ Title, ~ Published, ~ Journal, ~ When,
         "\\href{https://journals.sagepub.com/doi/10.1177/00323217241261229}{Radiating Truthiness: Authenticity performances in politics in Brazil and the United States}", "\\href{https://journals.sagepub.com/doi/10.1177/00323217241261229}{DOI: 10.1177/00323217241261229}", "Political Studies", "July 2024",
   "\\href{https://www.tandfonline.com/doi/full/10.1080/09644016.2023.2220639}{Which Amazon Problem? Problem-constructions and Transnationalism in Brazilian Presidential Discourse since 1985 (with Livio Silva-Muller)}",
   "\\href{https://www.tandfonline.com/doi/full/10.1080/09644016.2023.2220639}{DOI: 10.1080/09644016.2023.2220639}", "Environmental Politics", "June 2023",
-  "Urgency Analysis: Ranking Political Priorities (with Jael Tan and James Hollway)",
-  "Under review", "", "",
-  "Managing imprecise dates in R with messydates (with James Hollway)",
-  "Working Paper", "", "",
-  "Is peace good for the environment? A comparative approach to post-conflict environmental outcomes (with Stefano Jud and Quynh Nguyen)",
-  "Working Paper", "", "",
   "Public Acceptance of Environmental Restrictions in Non-Democratic Regimes (with Stefano Jud and Quynh Nguyen)",
+  "Under review", "", "",
+  "How urgent are your priorities? Comparing political priorities in discourse (with Jael Tan and James Hollway)",
+  "Under review", "", "",
+  "Armed Conflict and land-use dynamics: A global comparative analysis (with Remo Agovic, Stefano Jud, and Quynh Nguyen)",
+  "Working Paper", "", "",
+  "Universal Rules or Special Exceptions? Fairness and public support for climate policy in non-democratic settings (with Stefano Jud and Quynh Nguyen)",
+  "Working Paper", "", "",
+  "Does democratic backsliding defund the liberal world order? The case of the United Nations (with Livio Silva-Muller)", 
+  "Working Paper", "", "",
+  "Managing imprecise dates in R with messydates (with James Hollway)",
   "Working Paper", "", "") %>% 
   detailed_entries(where = Journal, with = Title, what = Published, when = When,
                    .protect = FALSE)
@@ -76,7 +80,7 @@ tribble(~ What, ~ When, ~ With, ~ Where, ~ Why,
         "Wyss Academy for Nature at the University of Bern",
         "Bern, Switzerland",
         "Engage in the research, design, and formulation of innovative and sustainable governance solutions for people and nature
-        \\item Lead an interdisciplinary research project mapping and analyzing environmental networks to identify new entry points for governance interventions and the impact of these interventions over time
+        \\item Lead an interdisciplinary research project mapping and analyzing environmental networks to identify new entry points for governance interventions and measure their impact over time
         \\item Evaluate the viability and effectiveness of possible solutions to pressing environmental challenges using state-of-the-art quantitative and qualitative research methods",
         "Research Assistant",
         "Sep 2020 - Aug 2024","Centre for International Environmental Studies", "Geneva, Switzerland",
