--- a/publications.Rmd
+++ b/publications.Rmd
@@ -39,9 +39,36 @@ $$\\[0.1cm]$$
 
 $$\\[0.1cm]$$
 
-**Urgency Analysis for Comparing Political Priorities (with Jael Tan and James Hollway)** - *Under review*
+**Public Acceptance of Environmental Restrictions in Non-Democratic Regimes (with Stefano Jud and Quynh Nguyen)**
 
-How urgent is climate change for our leaders and where does it lie in their list of priorities? When speaking to their electorates and canvassing support, politicians employ various terms to signal the urgency of different problems and the priority of specific policies. We introduce a new text analytic tool, urgency analysis, to capture the urgency of political priorities in discourse. Urgency analysis combines natural language processing and survey validated dictionaries to provide an interpretable measure of the urgency of priorities in political texts. To demonstrate the usefulness of urgency analysis, we compare the urgency of climate change priorities by speaker and over time. Using data on US presidential and UK prime ministerial political speeches on climate change between 2009 and 2019, we find that climate change appears less urgent over time in political discourses, especially when compared employment, immigration, and health. We conclude by discussing extensions to urgency analysis and its potential applications. Urgency analysis is implemented for R with the [poldis](https://github.com/henriquesposito/poldis) package, making it an easy, free, and accessible tool for researchers interested in analyzing political discourses.
+As environmental crises intensify, governments may enact policies that restrict individual freedoms. This study asks when citizens are willing to accept such constraints, especially in non-democratic regimes. Drawing on survey experiments with 17,793 respondents across 12 countries, we find that effectiveness, low costs, and citizen participation drive public support, while threat-based justifications have limited impact. Even in authoritarian contexts, restrictive environmental policies are not accepted unconditionally. These findings challenge the notion that autocracies can easily impose green mandates and underscore the importance of legitimacy, fairness, and inclusiveness in environmental governance, regardless of regime type.
+
+$$\\[0.1cm]$$
+
+**How urgent are your priorities? Comparing political priorities in discourse (with Jael Tan and James Hollway)** - *Under review*
+
+How can we tell which problems or policies political leaders consider urgent? While politicians regularly signal urgency to their audiences when speaking to their electorates or canvassing support, existing computational methods for analyzing text at scale were developed to identify topic frequency or discursive tone, and not which actions the speaker claims to prioritize. We introduce a new text analytic tool, urgency analysis, that combines natural language processing and survey validated dictionaries to provide an interpretable measure of the urgency of priorities in political texts. To demonstrate the usefulness of urgency analysis, we compare the urgency of climate change priorities by speaker and over time. Using data on US presidential and UK prime ministerial political speeches between 2009 and 2019, we find that climate change appears less urgent over time in political discourses, especially when compared to employment, immigration, and health. We conclude by discussing extensions to urgency analysis and its potential applications. Urgency analysis is implemented for R with the [poldis](https://github.com/henriquesposito/poldis) package, making it an easy, free, and accessible tool for researchers interested in analyzing political discourses.
+
+$$\\[0.1cm]$$
+
+
+
+$$\\[0.1cm]$$
+
+**Armed Conflict and land-use dynamics: A global comparative analysis (with Remo Agovic, Stefano Jud, and Quynh Nguyen)**
+
+Most conflicts of the past half-century occurred in biodiversity hotspots, yet the consequences of warfare for land-use dynamics remain poorly understood. Whereas violent conflicts can accelerate deforestation and agricultural expansion through institutional breakdown and population displacement, they can also have positive effects on conservation by disrupting mobility, markets, and settlements. These opposing mechanisms make the overall relationship between conflict and land use theoretically ambiguous and empirically inconsistent. To address this gap, we investigate how, and under what conditions, conflict influences land-use patterns in 32 countries that experienced conflicts from 2000 to 2022. We rely on a high-resolution, 30 by 30 square meters, global landcover time-series dataset and a georeferenced conflict events dataset to extract land uses around conflict events’ locations. Employing a quasi-experimental, staggered difference-in-differences, design, we estimate the effects of conflict on land-use change over time. We find that land use is highly responsive to conflict: shifts from native vegetation to agricultural land consistently take place 15 to 30 kilometers away from conflict locations. A better understanding of these dynamics is crucial to prevent that environmental degradation becomes a durable legacy of war.
+
+$$\\[0.1cm]$$
+**Universal Rules or Special Exceptions? Fairness and public support for climate policy in non-democratic settings (with Stefano Jud and Quynh Nguyen)**
+
+Fairness is widely seen as a cornerstone of climate policy legitimacy, yet what citizens understand as “fair” remains contested. Climate justice frameworks emphasize equity through differentiation, while welfare state research highlights the political advantages of universal rules. This paper adjudicates between these competing fairness logics through original conjoint survey experiments with more than 17,000 respondents across 12 hybrid and authoritarian regimes. The results reveal a consistent pattern: policies that include targeted exemptions, such as imposing costs only on the rich or urban residents, reduce rather than enhance public support. Citizens in non-democracies appear to interpret fairness primarily as equality of treatment, with exemptions often perceived as favoritism or elite capture. These results reveal a tension between normative and empirical fairness: policies designed to be equitable may lack legitimacy when publics reject differentiated treatment.
+
+$$\\[0.1cm]$$
+
+**Does democratic backsliding defund the liberal world order? The case of the United Nations (with Livio Silva-Muller)**
+
+Existing research suggests that backsliding democracies adjust their rhetoric and adopt strategic maneuvers to stall the diffusion of liberal norms within, and outside of, international organizations (IOs). Yet, we know little about whether these governments reduce their financial support to IOs - beyond the anecdotal case of Trump’s recent defunding. This article examines whether and how democratic backsliding affects the funding of IOs. We, first, employ a mixed-effects model leveraging a dataset covering over 30’000 member-states’ donations to 65 UN organizations from 2013 to 2024. We find no effect of different types of backsliding on financial contributions to IOs, even when accounting for organizations' mandates and memberships. Second, we conduct a comparative case-study of Brazil and the United States (US) showing that both the Trump (2017-2020) and Bolsonaro (2019-2023) administrations restructured funding to IOs in selective ways: while the US reduced voluntary contributions to normative agencies, such as UN Women, Brazil redirected funds toward technical organizations. Our results suggest that backsliding governments do not necessarily disengage from the international system, rather they recalibrate their financial commitments in selective, but consequential, ways.
 
 $$\\[0.1cm]$$
 
@@ -50,13 +77,3 @@ $$\\[0.1cm]$$
 Dates are often messy. Whether historical (or ancient), future, or even recent, we sometimes only know approximately when an event occurred, that it happened within a particular period, or sources offer multiple competing dates. Although researchers generally recognize this messiness, many feel expected to force artificial precision or unfortunate imprecision on temporal data to proceed with analysis. However, this can create inferential issues when timing or sequence is important. This paper introduces the [messydates](https://globalgov.github.io/messydates/) R package that assists researchers with this problem by retaining and working with various kinds of date imprecision.
 
 $$\\[0.1cm]$$
-
-**Is peace good for the environment? A comparative approach to post-conflict environmental outcomes (with Stefano Jud and Quynh Nguyen)**
-
-In the past decades, most conflicts took place in areas considered biodiversity hotspots. There is a growing literature that investigates the relationship between conflict and the environment; however, these studies typically remain at the country level and are rarely comparative. The aggregation of isolated case studies can be problematic since they rely on different definitions and operationalizations of conflicts, diverse measures of environmental degradation, and work  with different geopolitical levels. We propose investigating the relationship between conflict, peace, and the environment systematically by considering land-use change patterns in conflict  and post-conflict zones over time. We work with a high-resolution 30 by 30 square meters  global landcover time-series dataset and a georeferenced conflict events dataset to create similar sized peace and conflict areas for several countries that have experienced violent conflicts since the year 2000. These areas serve as treatment and control for inferential models that investigate how conflicts progress and end and their impact on land-use changes in their aftermath.
-
-$$\\[0.1cm]$$
-
-**Public Acceptance of Environmental Restrictions in Non-Democratic Regimes (with Stefano Jud and Quynh Nguyen)**
-
-As environmental crises intensify, governments may enact policies that restrict individual freedoms. This study asks when citizens are willing to accept such constraints, especially in non-democratic regimes. Drawing on survey experiments with 17,793 respondents across 12 countries, we find that effectiveness, low costs, and citizen participation drive public support, while threat-based justifications have limited impact. Even in authoritarian contexts, restrictive environmental policies are not accepted unconditionally. These findings challenge the notion that autocracies can easily impose green mandates and underscore the importance of legitimacy, fairness, and inclusiveness in environmental governance, regardless of regime type.
