--- a/CV/Sposito_CV.Rmd
+++ b/CV/Sposito_CV.Rmd
@@ -52,9 +52,9 @@ tribble(~ Degree, ~ Year, ~ Institution, ~ Where, ~ Why,
 
 ```{r}
 tribble(~ Title, ~ Published, ~ Journal, ~ When,
-        "\\href{https://journals.sagepub.com/doi/10.1177/00323217241261229}{Radiating Truthiness: Authenticity performances in politics in Brazil and the United States}", "\\href{https://journals.sagepub.com/doi/10.1177/00323217241261229}{DOI: 10.1177/00323217241261229}", "Political Studies", "July 2024",
+        "\\href{https://journals.sagepub.com/doi/10.1177/00323217241261229}{Radiating Truthiness: Authenticity performances in politics in Brazil and the United States}", "\\href{https://journals.sagepub.com/doi/10.1177/00323217241261229}{DOI: 10.1177/00323217241261229}", "Political Studies", "2025",
   "\\href{https://www.tandfonline.com/doi/full/10.1080/09644016.2023.2220639}{Which Amazon Problem? Problem-constructions and Transnationalism in Brazilian Presidential Discourse since 1985 (with Livio Silva-Muller)}",
-  "\\href{https://www.tandfonline.com/doi/full/10.1080/09644016.2023.2220639}{DOI: 10.1080/09644016.2023.2220639}", "Environmental Politics", "June 2023",
+  "\\href{https://www.tandfonline.com/doi/full/10.1080/09644016.2023.2220639}{DOI: 10.1080/09644016.2023.2220639}", "Environmental Politics", "2024",
   "Public Acceptance of Environmental Restrictions in Non-Democratic Regimes (with Stefano Jud and Quynh Nguyen)",
   "Under review", "", "",
   "How urgent are your priorities? Comparing political priorities in discourse (with Jael Tan and James Hollway)",
