--- a/packages.Rmd
+++ b/packages.Rmd
@@ -68,10 +68,10 @@ $$\\[0.1cm]$$
 
 </style>
 <div class="row" style="text-align:center">
-[manynet](https://snlab-ch.github.io/manynet/) - An R package to make, manipulate, and map myriad networks
+[manynet](https://stocnet.github.io/manynet/) - An R package to make, manipulate, and map myriad networks
 </div>
 <div class="row" style="text-align:center">
-<a href = "https://snlab-ch.github.io/manynet/">
+<a href = "https://stocnet.github.io/manynet/">
 ![](images/logo_manynet.png)
 </a>
 </div>
@@ -80,10 +80,22 @@ $$\\[0.1cm]$$
 
 </style>
 <div class="row" style="text-align:center">
-[migraph](https://snlab-ch.github.io/migraph/) - An R package with tools for multimodal and multilevel network analysis
+[autograph](https://stocnet.github.io/autograph/) - An R package for easier, succinct, and consistent network visualizations
 </div>
 <div class="row" style="text-align:center">
-<a href = "https://snlab-ch.github.io/migraph/">
+<a href = "https://stocnet.github.io/autograph/">
+![](images/autograph.png)
+</a>
+</div>
+
+$$\\[0.1cm]$$
+
+</style>
+<div class="row" style="text-align:center">
+[migraph](https://stocnet.github.io/migraph/) - An R package with tools for multimodal and multilevel network analysis
+</div>
+<div class="row" style="text-align:center">
+<a href = "https://stocnet.github.io/migraph/">
 ![](images/logo_migraph.png)
 </a>
 </div>
