Small updates to website

--- a/bff.Rmd
+++ b/bff.Rmd
@@ -353,3 +353,18 @@ $$\\[0.1cm]$$
 <center>
 ![](images/patchwork.jpg){ width=60% height=60% }
 <center>
+
+$$\\[0.1cm]$$
+
+# Lazelle
+
+$$\\[0.1cm]$$
+
+Our unique friends deserve a custom bike - 1980s Gazelle cyclo-cross frame restored and built up with a modern drive train and custom built wheels. 
+
+$$\\[0.1cm]$$
+
+<center>
+![](images/lluigi.jpg){ width=35% height=80% }
+<center>
+
